fix landing page layout issue

--- a/webapp/channels/src/sass/base/_structure.scss
+++ b/webapp/channels/src/sass/base/_structure.scss
@@ -128,7 +128,6 @@ body.app__body #root {
     }
 
     > :only-child {
-        grid-area: center;
         width: 100%;
     }
 
